# contextd

./: .gitignore  .golangci.yaml  Cargo.toml  Dockerfile  Makefile  README.md  contextd.toml  docker-compose.yml  go.mod  go.sum
api/: api.go  errors.go  handlers.go  handlers_test.go  types.go
audit/: audit.go  sqlite.go  verify.go
benches/: search_benchmark.rs  storage_benchmark.rs
cmd/contextd/: main.go
config/: config.go  config_test.go
config/testdata/: full.yaml
docs/: ARCHITECTURE.md
embed/: embedder.go  ollama.go  openai.go  worker.go
examples/: Cargo.toml  README.md  basic_integration.rs  batch_operations.rs  llm_memory_demo.rs
privacy/: retention.go
search/: hybrid.go  search.go  sqlite_fts.go  sqlite_fts_test.go
server/: server.go
src/: api.rs  audit.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  search.rs  storage.rs
store/: store.go
store/sqlite/: migrate.go  sqlite.go  sqlite_test.go  vec.go
store/sqlite/migrations/: 001_initial.sql  002_fts.sql  003_vec.sql  004_audit.sql  005_vec_cleanup.sql  006_retention.sql  embed.go
tests/: integration_tests.rs
