[package]
name = "contextd-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_integration"
path = "basic_integration.rs"

[[bin]]
name = "llm_memory_demo"
path = "llm_memory_demo.rs"

[[bin]]
name = "batch_operations"
path = "batch_operations.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# CLI for examples
clap = { version = "4.0", features = ["derive"] }
